[package]
name = "streamline"
version = "0.1.0"
authors = ["LuisAyuso <luis.f.ayuso@gmail.com>"]

[dependencies]
image = "0.14.0"
find_folder = "0.3.0"
rect_packer = "0.2.0"
time = "0.1.38"
ordered-float = "0.5.0"
seahash = "3.0.5"

[dev-dependencies] 
glium = "0.17.0"
glutin = "0.9.1"
streamline_glium_be = { path = "streamline_glium_be" }

