[package]
name = "streamline_glium_be"
version = "0.1.0"
authors = ["LuisAyuso <luis.f.ayuso@gmail.com>"]

[dependencies]
streamline = { path = ".." }
freetype-sys = "0.5.0"
glium = "0.17.0"
glutin = "0.9.1"
image = "0.14.0"
find_folder = "0.3.0"
lru = "0.1.4"
seahash = "3.0.5"
libc = "*"
cgmath = "0.15.0"

flame = { version = "*", optional = true }
flamer = { version = "*", optional = true }


[features]
default = []
profile = ["flame", "flamer"]
